fixing CSS issues on Firefox

--- a/branches/jWebSocket-1.0/jWebSocketClient/web/demos/jwsReporting/css/jwsReporting.css
+++ b/branches/jWebSocket-1.0/jWebSocketClient/web/demos/jwsReporting/css/jwsReporting.css
@@ -214,7 +214,7 @@
 	height:18px;
 	width:18px;
 	cursor: pointer;
-	margin-top:140px;
+	margin-top:155px;
 	margin-left:10px;
 }
 
@@ -226,7 +226,6 @@
 
 #hide_icon_help_text{
 	width:93%;
-	border-bottom-style: ridge;
 	float:left;
 	margin-left:30px;
 	margin-top:-17px;
@@ -249,11 +248,4 @@
 	background-color:  silver;
 	height:5px;
 	border:solid;
-}
-#separator{
-	margin-top:5px;
-	margin-left:15px;
-	width:655px;
-	border-bottom-style: ridge;
-	
 }
